feat : fix swagger
