# docs/swagger.yaml
@@ -1,43 +1,5 @@
 basePath: /
 definitions:
-  admin.Admin:
-    properties:
-      createdat:
-        type: string
-      email:
-        type: string
-      fullname:
-        type: string
-      id:
-        type: integer
-      no_hp:
-        type: string
-      password:
-        type: string
-      updatedat:
-        type: string
-    required:
-    - email
-    - fullname
-    - no_hp
-    - password
-    type: object
-  admin.AdminSwagger:
-    properties:
-      email:
-        type: string
-      name:
-        type: string
-      password:
-        type: string
-      username:
-        type: string
-    required:
-    - email
-    - name
-    - password
-    - username
-    type: object
   admin.AuthLogin:
     properties:
       email:
@@ -46,6 +8,22 @@ definitions:
         type: string
     required:
     - email
+    - password
+    type: object
+  admin.RegisterAdmin:
+    properties:
+      email:
+        type: string
+      fullname:
+        type: string
+      no_hp:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - fullname
+    - no_hp
     - password
     type: object
   customermitra.AuthLogin:
@@ -157,14 +135,14 @@ paths:
         name: admin
         required: true
         schema:
-          $ref: '#/definitions/admin.AdminSwagger'
+          $ref: '#/definitions/admin.RegisterAdmin'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/admin.Admin'
+            $ref: '#/definitions/admin.RegisterAdmin'
         "400":
           description: Bad Request
           schema:
